Se añadio edición de todo lo campos de datos de usuarios y se arreglo cronometro

--- a/views/index.html
+++ b/views/index.html
@@ -60,6 +60,11 @@
 
     @media only screen and (min-width: 600px) {
 
+      .feature {
+        margin: 10px 0;
+        height: 60vh;
+      }
+
       .logo-circle {
         display: none;
       }
@@ -113,7 +118,7 @@
           </div>
           <div class="card-panel card-landing">
 
-            <p class="medium-text">Abogados titulados, confiables, a tu servicio y cerca de ti</p>
+            <p class="medium-text">Localiza en tu zona a abogados titulados, confiables y a tu servicio</p>
 
             <div class="input-field">
               <select>
@@ -135,9 +140,48 @@
             </div>
 
           </div>
+
         </div>
       </div>
     </div>
+
+    <div class="grey darken-3">
+
+      <div class="container">
+        <div class="row grey-text">
+          <div class="col s12 m4 center hoverable feature">
+            <i class="material-icons" style="font-size: 200px">person</i><br>
+            <p>
+              ¿Contrataste abogado en Abogados colegiados?
+              <br>
+              <br>
+              <a href="" class="btn waves-effect blue">Registrate</a>
+            </p>
+          </div>
+          <div class="col s12 m4 center hoverable feature">
+            <i class="material-icons" style="font-size: 200px">book</i><br>
+            <p>
+              ¿Ya contrataste abogado en Abogados colegidos, estás registrado y requieres una segunda opinion o
+              revisión de tu expediente de forma gratuita?
+              <br>
+              <br>
+              <a href="" class="btn waves-effect blue">Contáctanos</a>
+            </p>
+          </div>
+          <div class="col s12 m4 center hoverable feature">
+            <i class="material-icons" style="font-size: 200px">assignment_turned_in</i><br>
+            <p>
+              Si no contrataste abogado en Abogados colegiados y requieres una segunda opinión o
+              revisión de tu expediente ¡Obtenla a bajo costo!
+              <br>
+              <br>
+              <a href="" class="btn waves-effect blue">Contáctanos</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <footer class="page-footer grey darken-4">
@@ -160,7 +204,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2018 Copyright Text
+        © 2018 Copyright
       </div>
     </div>
   </footer>
