Se completó vista de index

--- a/views/assets/css/abstyle.css
+++ b/views/assets/css/abstyle.css
@@ -2,7 +2,7 @@
 @import 'invtsBasics.css';
 
 :root {
-  --primary: #1565C0;
+  --primary: #1565C0 !important;
 }
 
 * {
@@ -35,14 +35,6 @@ main {
   flex: 1 0 auto;
 }
 
-/* inputs */
-
-
-/* label color */
-.input-field label {
-  color: #1565C0;
-}
-
 /* label focus color */
 .input-field input[type=text]:focus+label {
   color: #1565C0 !important;
@@ -50,23 +42,11 @@ main {
 
 /* label underline focus color */
 .input-field input[type=text]:focus {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
-}
-
-/* valid color */
-.input-field input[type=text].valid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
-}
-
-/* invalid color */
-.input-field input[type=text].invalid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
+  border-bottom: 1px solid #1565C0 !important;
+  box-shadow: 0 1px 0 0 #1565C0 !important;
 }
 
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #000;
+  color: #1565C0 !important;
 }
