--- a/views/signupClient.html
+++ b/views/signupClient.html
@@ -82,6 +82,13 @@
           <div class="divider"></div>
 
           <div class="input-field">
+            <i class="material-icons prefix">person</i>
+            <input id="userName" type="text" class="validate">
+            <label for="userName">First Name</label>
+          </div>
+
+          <div class="input-field">
+            <i class="material-icons prefix">person</i>
             <input id="userName" type="text" class="validate">
             <label for="userName">First Name</label>
           </div>
