Correcciones en vista de index

--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
     .btn-action-large {
       margin: 0 auto;
       margin-top: 5vh;
-      font-size: 25px;
+      font-size: 15px;
       padding: 10px 40px;
       height: auto;
       margin-bottom: 20px
@@ -71,7 +71,7 @@
 
       .feature {
         margin: 10px 0;
-        height: 60vh;
+        min-height: 60vh;
       }
 
       .logo-circle {
@@ -101,7 +101,6 @@
           <li><a href="sass.html" class="tooltipped btn waves-effect blue darken-2" data-position="bottom" data-tooltip="¡Encuentra a los mejores abogados!">Registrate</a></li>
           <li><a href="sass.html" class="tooltipped grey-text text-darken-4" data-position="bottom" data-tooltip="¡Registrate y recibe grandes beneceficios!">¿Eres
               abogado?</a></li>
-          <li><a href="sass.html" class="grey-text text-darken-4">Contactanos</a></li>
         </ul>
       </div>
     </nav>
@@ -168,7 +167,7 @@
         <div class="card-panel grey lighten-4" style="margin: 0">
           <div class="row grey-text">
             <div class="col s12 m4 center hoverable feature">
-              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 200px">person</i><br>
+              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 140px">person</i><br>
               <p class="grey-text text-darken-2">
                 ¿Contrataste abogado en Abogados colegiados?
                 <br>
@@ -177,7 +176,7 @@
               </p>
             </div>
             <div class="col s12 m4 center hoverable feature">
-              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 200px">book</i><br>
+              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 140px">book</i><br>
               <p class="grey-text text-darken-2">
                 ¿Ya contrataste abogado en Abogados colegidos, estás registrado y requieres una segunda opinion o
                 revisión de tu expediente de forma gratuita?
@@ -187,7 +186,7 @@
               </p>
             </div>
             <div class="col s12 m4 center hoverable feature">
-              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 200px">assignment_turned_in</i><br>
+              <i class="material-icons blue-text text-darken-2 reveal" style="font-size: 140px">assignment_turned_in</i><br>
               <p class="grey-text text-darken-2">
                 Si no contrataste abogado en Abogados colegiados y requieres una segunda opinión o
                 revisión de tu expediente ¡Obtenla a bajo costo!
@@ -208,7 +207,7 @@
           </div>
           <div class="col s12 m4 valign-wrapper">
             <div class="btn btn-large white blue-text text-darken-3 btn-action-large reveal">
-              <i class="material-icons blue-text  text-darken-3 large-text">person_add</i>
+              <i class="material-icons blue-text text-darken-3  left">person_add</i>
               Registrate
             </div>
           </div>
