Más correcciones en vista de index

--- a/views/assets/css/abstyle.css
+++ b/views/assets/css/abstyle.css
@@ -9,9 +9,11 @@
   font-family: 'Signika Negative';
 }
 
-body {
+body,
+p {
   color: #333 !important;
 }
+
 
 .bold-text {
   font-weight: 700;
@@ -37,16 +39,16 @@ main {
 
 /* label focus color */
 .input-field input[type=text]:focus+label {
-  color: #1565C0 !important;
+  color: var(--rpimary) !important;
 }
 
 /* label underline focus color */
 .input-field input[type=text]:focus {
-  border-bottom: 1px solid #1565C0 !important;
-  box-shadow: 0 1px 0 0 #1565C0 !important;
+  border-bottom: 1px solid var(--rpimary) !important;
+  box-shadow: 0 1px 0 0 var(--rpimary) !important;
 }
 
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #1565C0 !important;
+  color: var(--rpimary) !important;
 }
