--- a/views/signupClient.html
+++ b/views/signupClient.html
@@ -15,36 +15,10 @@
   <title>Abogados Colegiados</title>
 
   <style>
-    .container-card-landing {
-      margin: 0px 7%;
-    }
 
-    .logo-img-landing {
-      width: 50%;
-    }
-
-
-    .background-gradient {
-      background: #6936af;
-      background: linear-gradient(to right, #235bbc 0%, #4d3ab8 80%);
-    }
-
-    nav {
-      box-shadow: none !important;
-      background: none;
-    }
-
-    main {
-      width: 100%;
-      top: 0 !important
-    }
-
-    header {
-      position: absolute !important
-    }
-
-    .row {
-      margin: 0;
+    .simple-background{
+      background: url(assets/img/simple-background.svg);
+      background-size: 100%;
     }
 
     .logo-circle {
@@ -65,7 +39,7 @@
 
 <body>
 
-  <main class="grey lighten-4">
+  <main class="grey lighten-4 simple-background">
     <div class="row">
       <div class="col s12 m2 l4 hide-on-small-only"></div>
       <div class="col s12 m8 l4">
@@ -83,14 +57,14 @@
 
           <div class="input-field">
             <i class="material-icons prefix">person</i>
-            <input id="userName" type="text" class="validate">
-            <label for="userName">First Name</label>
+            <input id="name" type="text" class="validate">
+            <label for="name">Nombre Completo</label>
           </div>
 
           <div class="input-field">
-            <i class="material-icons prefix">person</i>
-            <input id="userName" type="text" class="validate">
-            <label for="userName">First Name</label>
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="text" class="validate">
+            <label for="email">Correo electrónico</label>
           </div>
 
         </div>
