--- a/views/signupClient.html
+++ b/views/signupClient.html
@@ -16,22 +16,17 @@
 
   <style>
 
-    .simple-background{
-      background: url(assets/img/simple-background.svg);
-      background-size: 100%;
+    .overflow-hidden {
+      overflow: hidden
     }
 
-    .logo-circle {
-      width: 80px !important;
-      height: 80px !important;
-      background: #e9e9e9;
-      border-radius: 50%;
-      box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
-      margin-right: 10%;
+    .col-full-height{
+      height: max-content;
     }
 
-    .img-logo-circle {
-      width: 80px;
+    .no-margin-y{
+      margin-top:0;
+      margin-bottom:0;
     }
   </style>
 
@@ -39,40 +34,154 @@
 
 <body>
 
-  <main class="grey lighten-4 simple-background">
-    <div class="row">
-      <div class="col s12 m2 l4 hide-on-small-only"></div>
-      <div class="col s12 m8 l4">
-        <div class="card-panel">
+  <main class="grey lighten-4">
 
-          <div class="valign-wrapper">
-            <div class="logo-circle">
-              <img src="assets/logo.png" class="img-logo-circle">
+    <div class="container-2">
+      <div class="row no-margin-y">
+        <div class="col m12 l7  overflow-hidden">
+
+          <form class="card-panel container-2">
+
+
+            <div class="row">
+              <div class="col s12">
+                <div class="valign-wrapper">
+                  <img src="assets/logo.png" style="width: 50px; margin-right: 20px;">
+
+                  <div class="circle-icon-container left blue valign-wrapper">
+                    <i class="material-icons white-text" style="margin: 0 auto">school</i>
+                  </div>
+                  <span>Crea una cuenta cómo abogado</span>
+                </div>
+
+              </div>
             </div>
-            <h1 class="large-text bold-text ">
-              Abogados Colegiados
-            </h1>
-          </div>
-          <div class="divider"></div>
 
-          <div class="input-field">
-            <i class="material-icons prefix">person</i>
-            <input id="name" type="text" class="validate">
-            <label for="name">Nombre Completo</label>
+
+
+            <div class="row no-margin-y">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">person</i>
+                <input maxlength="120" id="name" type="text" class="validate">
+                <label for="name">Nombre completo</label>
+              </div>
+              <div class="input-field col s12">
+                <i class="material-icons prefix">place</i>
+                <input maxlength="120" id="email" type="email" class="validate">
+                <label for="email">Domicilio</label>
+              </div>
+              <div class="input-field col s12">
+                <i class="material-icons prefix">how_to_reg</i>
+                <textarea maxlength="120" id="description" type="text" class="validate materialize-textarea"></textarea>
+                <label for="description">Sobre ti</label>
+              </div>
+              <div class="input-field col s6">
+                <i class="material-icons prefix">email</i>
+                <input maxlength="120" id="email" type="email" class="validate">
+                <label for="email">Correo elctrónico</label>
+              </div>
+              <div class="input-field col s6">
+                <i class="material-icons prefix">phone</i>
+                <input maxlength="120" id="phone" type="tel" class="validate">
+                <label for="phone">Télefono</label>
+              </div>
+
+              <div class="input-field col s12 m6">
+                <i class="material-icons prefix">lock</i>
+                <input maxlength="60" id="password" type="password" class="validate">
+                <label for="password">Contraseña</label>
+              </div>
+              <div class="input-field col s12 m6">
+                <i class="material-icons prefix">lock </i>
+                <input maxlength="120" id="passwordConfirm" type="password" class="validate">
+                <label for="passwordConfirm">Confirmar</label>
+              </div>
+            </div>
+
+            <label>
+              <input type="checkbox" class="filled-in" checked="checked" />
+              <span><b>¿Brindas asesoría gratuita?</b></span>
+            </label>
+            <br>
+            <label>
+              <input type="checkbox" class="filled-in" checked="checked" />
+              <span>He leido el <a>aviso de privacidad</a></span>
+            </label>
+            <br>
+            <label>
+              <input type="checkbox" class="filled-in" checked="checked" />
+              <span>Acepto <a>términos y condiciones</a></span>
+            </label>
+
+            <div class="right-align">
+              <button class="btn waves-effect blue darken-1">
+                <i class="material-icons left">check</i>
+                Cear cuenta
+              </button>
+            </div>
+
+          </form>
+
+        </div>
+        <div class="col m12 l5">
+
+          <div class="row container-2">
+            <div class="col m3 l4">
+              <i class="material-icons blue-text text-darken-1 large reveal">how_to_reg</i>
+            </div>
+            <div class="col m9 l8">
+              <p>
+                ¿Contrataste abogado en Abogados Colegiados?
+                <br>
+                <br>
+                <a href="" class="btn waves-effect blue darken-1">
+                  <i class="material-icons left">person_add</i>
+                  Registrate
+                </a>
+              </p>
+            </div>
           </div>
 
-          <div class="input-field">
-            <i class="material-icons prefix">email</i>
-            <input id="email" type="text" class="validate">
-            <label for="email">Correo electrónico</label>
+          <div class="row">
+            <div class="col m3 l4">
+              <i class="material-icons blue-text text-darken-1 reveal large">local_library</i>
+            </div>
+            <div class="col m9 l8">
+              <p>
+                ¿Ya contrataste abogado en Abogados Colegiados, estás registrado y requieres una segunda opinion o
+                revisión de tu expediente de forma gratuita?
+                <br>
+                <br>
+                <a href="" class="btn waves-effect blue darken-1">
+                  <i class="material-icons left">phone</i>
+                  Contáctanos
+                </a>
+              </p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col m3 l4">
+              <i class="material-icons blue-text text-darken-1 reveal large">contact_phone</i>
+            </div>
+            <div class=" col m9 l8">
+              <p>
+                Si no contrataste abogado en Abogados Colegiados y requieres una segunda opinión o
+                revisión de tu expediente ¡Obtenla a bajo costo!
+                <br>
+                <br>
+                <a href="" class="btn waves-effect blue darken-1">
+                  <i class="material-icons left">phone</i>
+                  Contáctanos
+                </a>
+              </p>
+            </div>
           </div>
 
         </div>
       </div>
-      <div class="col s12 m2 l4 hide-on-small-only"></div>
     </div>
   </main>
-
   <footer class="page-footer grey darken-4">
     <div class="container">
       <div class="row">
@@ -86,7 +195,6 @@
             <li><a class="grey-text text-lighten-2" href="#!">Contactanos</a></li>
             <li><a class="grey-text text-lighten-2" href="#!">Facebook</a></li>
             <li><a class="grey-text text-lighten-2" href="#!">Twitter</a></li>
-            <li><a class="grey-text text-lighten-2" href="#!">Intagram</a></li>
           </ul>
         </div>
       </div>
