Se creó la vista de registro para usuarios y para clientes

--- a/views/signupUser.html
+++ b/views/signupUser.html
@@ -49,31 +49,19 @@
                   <img src="assets/logo.png" style="width: 50px; margin-right: 20px;">
 
                   <div class="circle-icon-container left blue valign-wrapper">
-                    <i class="material-icons white-text" style="margin: 0 auto">school</i>
+                    <i class="material-icons white-text" style="margin: 0 auto">person</i>
                   </div>
-                  <span>Crea una cuenta cómo <b>abogado</b></span>
+                  <span>Crea una cuenta cómo <b>usuario</b></span>
                 </div>
 
               </div>
             </div>
-
-
 
             <div class="row no-margin-y">
               <div class="input-field col s12">
                 <i class="material-icons prefix">person</i>
                 <input maxlength="120" id="name" type="text" class="validate">
                 <label for="name">Nombre completo</label>
-              </div>
-              <div class="input-field col s12">
-                <i class="material-icons prefix">place</i>
-                <input maxlength="120" id="email" type="email" class="validate">
-                <label for="email">Domicilio</label>
-              </div>
-              <div class="input-field col s12">
-                <i class="material-icons prefix">how_to_reg</i>
-                <textarea maxlength="120" id="description" type="text" class="validate materialize-textarea"></textarea>
-                <label for="description">Sobre ti</label>
               </div>
               <div class="input-field col s6">
                 <i class="material-icons prefix">email</i>
@@ -85,7 +73,6 @@
                 <input maxlength="120" id="phone" type="tel" class="validate">
                 <label for="phone">Télefono</label>
               </div>
-
               <div class="input-field col s12 m6">
                 <i class="material-icons prefix">lock</i>
                 <input maxlength="60" id="password" type="password" class="validate">
@@ -97,11 +84,6 @@
                 <label for="passwordConfirm">Confirmar</label>
               </div>
             </div>
-
-            <label>
-              <input type="checkbox" class="filled-in" checked="checked" />
-              <span><b>¿Brindas asesoría gratuita?</b></span>
-            </label>
             <br>
             <label>
               <input type="checkbox" class="filled-in" checked="checked" />
@@ -128,12 +110,6 @@
 
         </div>
         <div class="col m12 l5">
-
-          <!-- 
-            Hola erik, todo esto que está aquí abajo es el diseño de los beneficios de registrarte
-            pero son los de los usuarios y esta pantalla es para clientes, pero dejala,
-            porque cuando tenga la lista de beneficios para clientes lo voy a cambiar pero ya en el de vue 
-          -->
 
           <div class="row container-2">
             <div class="col m3 l4">
