--- a/views/index.html
+++ b/views/index.html
@@ -261,6 +261,7 @@
       var instances = M.FormSelect.init(elems, {});
       var elems = document.querySelectorAll('.tooltipped');
       var instances = M.Tooltip.init(elems, {});
+      console.log('test')
     });
   </script>
 </body>
