--- a/views/assets/css/invtsBasics.css
+++ b/views/assets/css/invtsBasics.css
@@ -40,6 +40,14 @@
   margin-bottom: 0;
 }
 
+/* cols materialize */
+.overflow-hidden {
+  overflow: hidden
+}
+
+.col-full-height {
+  height: max-content;
+}
 
 /* label focus color materialize */
 .input-field input:focus+label,
@@ -90,4 +98,11 @@
 
 .input-field {
   margin: 6px 0;
+}
+
+/* no margin */
+
+.no-margin-y {
+  margin-top: 0;
+  margin-bottom: 0;
 }
